Whoa, lots of stuff.

--- a/_posts/2014-09-16-xoxo2014.md
+++ b/_posts/2014-09-16-xoxo2014.md
@@ -4,23 +4,21 @@ title: XOXO 2014 Recap
 draft: true
 ---
 Let me summarize my XOXO 2014 take-aways:
-Success may not be what you expect.
-You've got to try in order to succeed.
-We're all going to die.
 
-Success may not be what you expect.
-==========================
+* Success may not be what you expect.
+* You've got to try in order to succeed.
+* We're all going to die.
+
+### Success may not be what you expect.
 
 I believe the most succinct way we heard this sentiment was from the frenetic, hilarious, and insightful [Hank Green][1]. "FUCK YOU DREAMS," read his slide. Four-years-ago-Hank would have loved to be on television.  Modern-Hank realizes that he loves the freedom and control that comes from producing web content.  Modern-Hank today knows that he loves editing video.  Modern-Hank was four years more experience and knowledge than Four-years-ago-Hank.  This didn't stop Modern-Hank from seriously considering a television contract, because it was part of his old dreams.
 
 [Joseph Fink][2] told us that sometimes success feels like being awake at a single digit hour, your heart racing so fast that you think it might explode.  It also may involve the Hampton Inn in Boise, "the most depressing place in the world."
 
-_$100 * 1,000 true fans = $100,000_ was the formula 
-[Kevin Kelly][5] showed us.  Every launch doesn't need a billion users, every album doesn't need to sell a million copies.  You just need enough people that want to support your work and engage with you.
+_$100 * 1,000 true fans = $100,000_ was the formula [Kevin Kelly][5] showed us.  Every launch doesn't need a billion users, every album doesn't need to sell a million copies.  You just need enough people that want to support your work and engage with you.
 
 
-You've got to try in order to succeed.
-==========================
+### You've got to try in order to succeed.
 
 [Song-a-day-Mann, Jonathan Mann][3], showed us a graph of his hits.  And then a graph describing his theory that 70% of what you'll make is OK, 20% bad, and 10% great.  He showed us songs he wrote on his worts days (sick with food poisoning and on the day his grandmother passed away).  He showed us that you can decide to do something and stick with it.  That the act of creating can become so ingrained that you just blow pass song 2000 (when you planned to stop) and just keep creating.
 
@@ -36,3 +34,4 @@ Darius delivered a hilarious and pointed talk which shed light on the often negl
 [2]:  http://commonplacebooks.com/
 [3]: https://www.youtube.com/user/therockcookiebottom
 [4]: http://tinysubversions.com/
+[5]: http://kk.org
