--- a/_posts/2014-09-16-xoxo2014.md
+++ b/_posts/2014-09-16-xoxo2014.md
@@ -11,11 +11,20 @@ Let me summarize my XOXO 2014 take-aways:
 
 ### Success may not be what you expect.
 
+<div class="photo">
+<img src="/assets/img/xoxo2014_hank.jpg" height="300" /><br /><cite><a href="https://www.flickr.com/photos/ekai/15217997746/in/photolist-pbLdxu-dbcePD-dc7Wn2">Photo by Eddie Codel</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
+</div>
+
 I believe the most succinct way we heard this sentiment was from the frenetic, hilarious, and insightful [Hank Green][1]. "FUCK YOU DREAMS," read his slide. Four-years-ago-Hank would have loved to be on television.  Modern-Hank realizes that he loves the freedom and control that comes from producing web content.  Modern-Hank today knows that he loves editing video.  Modern-Hank was four years more experience and knowledge than Four-years-ago-Hank.  This didn't stop Modern-Hank from seriously considering a television contract, because it was part of his old dreams.
 
 [Joseph Fink][2] told us that sometimes success feels like being awake at a single digit hour, your heart racing so fast that you think it might explode.  It also may involve the Hampton Inn in Boise, "the most depressing place in the world."
 
-_$100 * 1,000 true fans = $100,000_ was the formula [Kevin Kelly][5] showed us.  Every launch doesn't need a billion users, every album doesn't need to sell a million copies.  You just need enough people that want to support your work and engage with you.
+<div class="photo">
+<img src="/assets/img/xoxo2014_kk.jpg" height="400" /><br /><cite><a href="https://www.flickr.com/photos/obra/15045400187/in/photolist-oTTU3w-pbSRJ6-p9m5yy-pa7HfG-oUDS7b-pbmbvY-pa7FdW-oUEsRt-oUEwwK-oUEr4F-oWgbyo-pdtxwi-pcXWkA-oVvC2A-pcZLDv-oVuy4P-oVuzHk-paXThs-oVvBiv-pcXY9q-pcZSTe-pcJ4Ex-pcXXEQ-pcZMfa-pcZNDx-oVvGya-oVwfnc-oUpZZU-oUuCCy-oWbGgt-oUhCfW-pbJgKm-oVmenr-pczD8T-oVmdo2-pczDFB-pczDTv-p9ZUPN-pczEYM-oVmfgF-oVnvEL-pczEza-oUcQzp-pbH3Zd-pbFTXh-pb7tyn-oTSL9P-oUDMqs-pbSQoF-paPqhw">Photo by Jesse Vincent</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
+</div>
+
+
+_$100 * 1,000 true fans = $100,000_ was the formula [Kevin Kelly][5] showed us.  Every launch doesn't need a billion users, every album doesn't need to sell a million copies.  You just need enough people that want to support your work and engage with you.  An apt metaphor Kevin gave us was that startups (optimized for growth) are like pigeons (there are a lot), but that the world needs all kinds of birds.  (Such as birds of paradise, of which there are very few.)
 
 
 ### You've got to try in order to succeed.
@@ -23,9 +32,11 @@ _$100 * 1,000 true fans = $100,000_ was the formula [Kevin Kelly][5] showed us. 
 [Song-a-day-Mann, Jonathan Mann][3], showed us a graph of his hits.  And then a graph describing his theory that 70% of what you'll make is OK, 20% bad, and 10% great.  He showed us songs he wrote on his worts days (sick with food poisoning and on the day his grandmother passed away).  He showed us that you can decide to do something and stick with it.  That the act of creating can become so ingrained that you just blow pass song 2000 (when you planned to stop) and just keep creating.
 
  [Darius Kazemi][4] showed us exactly how to succeed.
-1. Don't now what you are doing
-2. Buy lottery tickets
-3. Build a community
+ 
+<div class="photo">
+<img src="/assets/img/xoxo2014_lotto.jpg" height="400" /><br /><cite><a href="https://www.flickr.com/photos/theory/15240408645/in/photostream/">Photo by David Wheeler</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
+</div>
+
 
 Darius delivered a hilarious and pointed talk which shed light on the often neglected truth that luck and dedication both play a role in success.  He equated his frequent projects and copious output to buying more lottery tickets.  Each thing he produced was another change "to win."   He also suggested that his ratio of successful projects matched Mann's ratio of 70/20/10.
 
