Latest xoxo draft.

--- a/_posts/2014-09-16-xoxo2014.md
+++ b/_posts/2014-09-16-xoxo2014.md
@@ -3,11 +3,15 @@ layout: post
 title: XOXO 2014 Recap
 draft: true
 ---
-Let me summarize my XOXO 2014 take-aways:
+Let me list my XOXO 2014 take-aways, because everyone loves a list!
 
 * Success may not be what you expect.
 * You've got to try in order to succeed.
 * We're all going to die.
+
+I'm not going to summarize all the talks, or even fully cover the talks I mention, but simply touch on the things that have stuck with me.  (If you just want lots of highlights, scroll to the end to find Johnathan Mann's daily recaps.)
+
+<br />
 
 ### Success may not be what you expect.
 
@@ -15,34 +19,77 @@ Let me summarize my XOXO 2014 take-aways:
 <img src="/assets/img/xoxo2014_hank.jpg" height="300" /><br /><cite><a href="https://www.flickr.com/photos/ekai/15217997746/in/photolist-pbLdxu-dbcePD-dc7Wn2">Photo by Eddie Codel</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
 </div>
 
-I believe the most succinct way we heard this sentiment was from the frenetic, hilarious, and insightful [Hank Green][1]. "FUCK YOU DREAMS," read his slide. Four-years-ago-Hank would have loved to be on television.  Modern-Hank realizes that he loves the freedom and control that comes from producing web content.  Modern-Hank today knows that he loves editing video.  Modern-Hank was four years more experience and knowledge than Four-years-ago-Hank.  This didn't stop Modern-Hank from seriously considering a television contract, because it was part of his old dreams.
+The frenetic, hilarious, and insightful [Hank Green][1] gave this sentiment in bite-size form. "FUCK YOU DREAMS," read his slide. Four-years-ago-Hank would have loved to be on television.  Modern-Hank realizes that he loves the freedom and control that comes from producing web content.  Modern-Hank today knows that he loves editing video.  Modern-Hank was four years more experience and knowledge than Four-years-ago-Hank.  This didn't stop Modern-Hank from seriously considering a television contract, because it was part of his old dreams.
 
-[Joseph Fink][2] told us that sometimes success feels like being awake at a single digit hour, your heart racing so fast that you think it might explode.  It also may involve the Hampton Inn in Boise, "the most depressing place in the world."
+The success of Welcome to Night Vale took [Joseph Fink][2] from a table in NYC selling energy to a year spent working on one project with his friends.  He told us that sometimes success feels like being awake at a single digit hour, your heart racing so fast that you think it might explode.  It also may involve the Hampton Inn in Boise, "the most depressing place in the world."
+
+
+_$100 * 1,000 true fans = $100,000_ was the formula [Kevin Kelly][5] showed us.  Every launch doesn't need a billion users, every album doesn't need to sell a million copies.  You just need enough people that want to support your work and engage with you.  A metaphor Kevin gave us was that startups (optimized for growth) are like pigeons (there are a lot), but that the world needs all kinds of birds.  (Including birds of paradise, of which there are very few.)
 
 <div class="photo">
-<img src="/assets/img/xoxo2014_kk.jpg" height="400" /><br /><cite><a href="https://www.flickr.com/photos/obra/15045400187/in/photolist-oTTU3w-pbSRJ6-p9m5yy-pa7HfG-oUDS7b-pbmbvY-pa7FdW-oUEsRt-oUEwwK-oUEr4F-oWgbyo-pdtxwi-pcXWkA-oVvC2A-pcZLDv-oVuy4P-oVuzHk-paXThs-oVvBiv-pcXY9q-pcZSTe-pcJ4Ex-pcXXEQ-pcZMfa-pcZNDx-oVvGya-oVwfnc-oUpZZU-oUuCCy-oWbGgt-oUhCfW-pbJgKm-oVmenr-pczD8T-oVmdo2-pczDFB-pczDTv-p9ZUPN-pczEYM-oVmfgF-oVnvEL-pczEza-oUcQzp-pbH3Zd-pbFTXh-pb7tyn-oTSL9P-oUDMqs-pbSQoF-paPqhw">Photo by Jesse Vincent</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
+<img src="/assets/img/xoxo2014_kk.jpg" height="300" /><br /><cite><a href="https://www.flickr.com/photos/obra/15045400187/in/photolist-oTTU3w-pbSRJ6-p9m5yy-pa7HfG-oUDS7b-pbmbvY-pa7FdW-oUEsRt-oUEwwK-oUEr4F-oWgbyo-pdtxwi-pcXWkA-oVvC2A-pcZLDv-oVuy4P-oVuzHk-paXThs-oVvBiv-pcXY9q-pcZSTe-pcJ4Ex-pcXXEQ-pcZMfa-pcZNDx-oVvGya-oVwfnc-oUpZZU-oUuCCy-oWbGgt-oUhCfW-pbJgKm-oVmenr-pczD8T-oVmdo2-pczDFB-pczDTv-p9ZUPN-pczEYM-oVmfgF-oVnvEL-pczEza-oUcQzp-pbH3Zd-pbFTXh-pb7tyn-oTSL9P-oUDMqs-pbSQoF-paPqhw">Photo by Jesse Vincent</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
 </div>
 
 
-_$100 * 1,000 true fans = $100,000_ was the formula [Kevin Kelly][5] showed us.  Every launch doesn't need a billion users, every album doesn't need to sell a million copies.  You just need enough people that want to support your work and engage with you.  An apt metaphor Kevin gave us was that startups (optimized for growth) are like pigeons (there are a lot), but that the world needs all kinds of birds.  (Such as birds of paradise, of which there are very few.)
-
+<br />
 
 ### You've got to try in order to succeed.
 
-[Song-a-day-Mann, Jonathan Mann][3], showed us a graph of his hits.  And then a graph describing his theory that 70% of what you'll make is OK, 20% bad, and 10% great.  He showed us songs he wrote on his worts days (sick with food poisoning and on the day his grandmother passed away).  He showed us that you can decide to do something and stick with it.  That the act of creating can become so ingrained that you just blow pass song 2000 (when you planned to stop) and just keep creating.
+[Song-a-day-Mann, Jonathan Mann][3], showed us a graph of his hits.  And then a graph describing his theory that 70% of what you'll make is OK, 20% bad, and 10% great.  He showed us songs he wrote on his worst days (sick with food poisoning and on the day his grandmother passed away).  He showed us that you can decide to do something and stick with it.  That the act of creating can become so ingrained that you blow pass song 2,000 (when you planned to stop) and keep creating.
 
- [Darius Kazemi][4] showed us exactly how to succeed.
+ [Darius Kazemi][4] showed us exactly how to succeed:
  
 <div class="photo">
-<img src="/assets/img/xoxo2014_lotto.jpg" height="400" /><br /><cite><a href="https://www.flickr.com/photos/theory/15240408645/in/photostream/">Photo by David Wheeler</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
+<img src="/assets/img/xoxo2014_lotto.jpg" height="400" /><br /><cite><a href="https://www.flickr.com/photos/thelastminute/15241151141/in/photolist-pdNTeX-pe6WoT-oWB3Tc-pe7g1u-pe7Aab-pe84Q4-pdSuEa-pe8dne-oWAgYK-pe5WP1-pdPZQv-oWDDZ3-peaBXr-oWzMUs-oWDjTh-pc3aAW-pe9bYR-oWAdXq-oWCcqa-oWCPzf-pc7R5N-pe6Fzm-pc4CaL-oWEwpt-pe95EZ-oWAkFA-pe5U2R-oWzkUn-pc6DNG-oWE3Gh-pe5Xu2-pe5hUB-oWBiat-pe5Qif-oWDshp-oWCtNm-oWE1rT-pc3r99-oWzeHe-oWFcbC-pe7hDT-pdPPnB-pc6xqw-oWAALc-oWE6ja-pe54Pq-oWAstm-pe8dJy-oWzuJA-pdN6QR">Photo by Duncan Rawlinson</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
 </div>
 
+Darius delivered a hilarious and pointed talk which shed light on the often neglected truth that luck and dedication both play a role in success.  He equated his frequent projects and copious output to buying more lottery tickets.  Each thing he produced was another chance "to win."   He also suggested that his ratio of successful projects matched Mann's ratio of 70/20/10.
 
-Darius delivered a hilarious and pointed talk which shed light on the often neglected truth that luck and dedication both play a role in success.  He equated his frequent projects and copious output to buying more lottery tickets.  Each thing he produced was another change "to win."   He also suggested that his ratio of successful projects matched Mann's ratio of 70/20/10.
+<div class="photo">
+<img src="/assets/img/xoxo2014_gruber.jpg" height="300" /><br /><cite><a href="https://twitter.com/edteck/status/510938280108380161/photo/1">Photo by Peter Pappas</a></cite>
+</div>
+[John Gruber][6] said one thing that stuck in my mind, "it's never too late."  He showed us a graph of Apple's sales in 2001 when he started writing and 2006 when he started working on Daring Fireball full time.  They went from 65 million to 2 billion dollars in revenue.  Obviously a great time to start writing about apple...  Then he showed us the growth from 2006 to 2013, 2 billion to 100 billion in revenue.  While it looked like Gruber got in at the perfect time... the growth continued and someone looking to grow along with Apple could likely have started anytime along that curve.  So, you know, go follow your dreams. (Unless you hate those dreams now, then "FUCK YOUR DREAMS.")
 
+
+<br />
+
+### We're all going to die.
+
+[Gina Trapani][7] kicked things off with a meta-9/11 joke (which landed pretty well).  She realized in hindsight, that she created Lifehacker and was laser-focused on getting the most out of ever minute of life, because 9/11 had been such a profound reminder of mortality.  She talked about how sometimes your worst moments will feed your best work.
+
+<div class="photo">
+<img src="/assets/img/xoxo2014_gina.jpg" height="300" /><br /><cite><a href="https://twitter.com/edteck/status/510938280108380161/photo/1">Photo by Peter Pappas</a></cite>
+</div>
+
+She touched on the fear of moving from something successful, Lifehacker, to... well, whatever came next.  She's since turned that understanding of mortality in to a focus on the meaning of our social media interactions with her startup [ThinkUp][8].  She encouraged us all to think about a time that social media has played a part in our lives: the birth of a child, marriage, #ferguson, the 2008 election.
+
+
+[Paul Ford][9] gave a moving and vulnerable talk detailing his life.  Depression &amp; suicidal thoughts &mdash; lost loved ones &mdash; frustrating employers &mdash; procrastination &mdash; food issues; Paul touched on it all.  
+
+<div class="photo">
+<img src="/assets/img/xoxo2014_ftrain.jpg" height="300" /><br /><cite><a href="https://www.flickr.com/photos/thelastminute/15221109646/in/photolist-pc3aAW-oWBLGq-oWzMUs-oWBhNZ-pe5Xu2-peaBXr-pc3VDf-pe8dne-pe5WP1-oWz46H-oWDDZ3-oWAumG-pe73Gb-oWDEFw-oWCY3N-pc8SZ7-pdNTeX-oWApo3-pe5c2b-pe65MP-pc4NSY-oWBdF9-pe5b8F-oWzQx2-pc5Pgb-pe5Qif-pe6WoT-oWB3Tc-oWDshp-pdMVRT-oWD9Dh-oWzEMa-oWCcqa-oWz1HY-oWE6ja-pc6DNG-pe54Pq-pc4CaL-pe6Wm5-oWzeHe-pe95EZ-pdSuEa-oWqPYC-pbLdxu-pbKb3m-pduUM2-pduykk-oWfAZm-pc7R5N-pe84Q4">Photo by Duncan Rawlinson</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
+</div>
+
+Paul showed us a variety of projects he's created to help him push through his struggles.  Perhaps the most visceral was anxietybox, a site he programmed to email him all the terrible things his anxieties tell him... so he can reply to his anxieties via email, telling them to "EAT A DICK!"
+
+Paul said that when people ask him what he wants to do with the things he creates, that what he really wants to do is keep working on them.  The work is the goal, and he hopes to keep working on them for the next two decades, at least.
+
+<br />
+
+### One More Thing
+
+If you've got 10 minutes to spare, Johnathan Mann's two recap songs will catch you up on all the highlights I may have missed. And they're just fun to watch.
+
+<iframe width="560" height="315" src="//www.youtube.com/embed/fCNtEn9PsVY?list=UUvj5S3f10rO6CoibatfRGzg" frameborder="0" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="//www.youtube.com/embed/egu4uIY5ShY?list=UUvj5S3f10rO6CoibatfRGzg" frameborder="0" allowfullscreen></iframe>
 
 [1]: http://hankgreen.com/
-[2]:  http://commonplacebooks.com/
+[2]: http://commonplacebooks.com/
 [3]: https://www.youtube.com/user/therockcookiebottom
 [4]: http://tinysubversions.com/
-[5]: http://kk.org
+[5]: http://kk.org/
+[6]: http://daringfireball.net
+[7]: http://ginatrapani.org/
+[8]: http://thinkup.com/
+[9]: http://ftrain.com/
