Fixed typo and published xoxo

--- a/_posts/2014-09-16-xoxo2014.md
+++ b/_posts/2014-09-16-xoxo2014.md
@@ -1,7 +1,6 @@
 ---
 layout: post
 title: XOXO 2014 Recap
-draft: true
 ---
 Let me list my XOXO 2014 take-aways, because everyone loves a list!
 
@@ -19,7 +18,7 @@ I'm not going to summarize all the talks, or even fully cover the talks I mentio
 <img src="/assets/img/xoxo2014_hank.jpg" height="300" /><br /><cite><a href="https://www.flickr.com/photos/ekai/15217997746/in/photolist-pbLdxu-dbcePD-dc7Wn2">Photo by Eddie Codel</a> - <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC</a></cite>
 </div>
 
-The frenetic, hilarious, and insightful [Hank Green][1] gave this sentiment in bite-size form. "FUCK YOU DREAMS," read his slide. Four-years-ago-Hank would have loved to be on television.  Modern-Hank realizes that he loves the freedom and control that comes from producing web content.  Modern-Hank today knows that he loves editing video.  Modern-Hank was four years more experience and knowledge than Four-years-ago-Hank.  This didn't stop Modern-Hank from seriously considering a television contract, because it was part of his old dreams.
+The frenetic, hilarious, and insightful [Hank Green][1] gave this sentiment in bite-size form. "FUCK YOUR DREAMS," read his slide. Four-years-ago-Hank would have loved to be on television.  Modern-Hank realizes that he loves the freedom and control that comes from producing web content.  Modern-Hank today knows that he loves editing video.  Modern-Hank was four years more experience and knowledge than Four-years-ago-Hank.  This didn't stop Modern-Hank from seriously considering a television contract, because it was part of his old dreams.
 
 The success of Welcome to Night Vale took [Joseph Fink][2] from a table in NYC selling energy to a year spent working on one project with his friends.  He told us that sometimes success feels like being awake at a single digit hour, your heart racing so fast that you think it might explode.  It also may involve the Hampton Inn in Boise, "the most depressing place in the world."
 
